--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^4.2.0",
     "react-charts": "^3.0.0-beta.36",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^17.0.2",
@@ -26,6 +28,8 @@
     "react-query": "^3.39.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.12",
+    "simple-line-chart": "^1.1.2",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
