--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "http://appicsoftwares.in/designer/dot-new-theme",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.3.6",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
@@ -15,8 +16,11 @@
     "@types/node": "^18.8.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@uselessdev/datepicker": "^2.6.0",
     "body-scroll-lock": "^4.0.0-beta.0",
     "bootstrap": "^5.2.1",
+    "date-fns": "^2.29.3",
+    "framer-motion": "^7.6.1",
     "multi-range-slider-react": "^2.0.2",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
